# har-intedu-t01

./: .gitignore  Cargo.toml  icon.svg.import  lib.gdextension  lib.gdextension.uid  project.godot
animations/main_menu/: option_rect_anim.res  start_rect_anim.res
blocks/: blocks_lib.tres  empty_box_mesh.tres  mesh_lib_source.tscn
fonts/: CascadiaCode.ttf.import  CascadiaCodeItalic.ttf.import  CascadiaCodeNF.theme  CascadiaCodeNF.ttf.import  CascadiaCodeNFItalic.ttf.import  CascadiaCodePL.ttf.import  CascadiaCodePLItalic.ttf.import  CascadiaMono.ttf.import  CascadiaMonoItalic.ttf.import  CascadiaMonoNF.ttf.import  CascadiaMonoNFItalic.ttf.import  CascadiaMonoPL.ttf.import  CascadiaMonoPLItalic.ttf.import  NotoSansJP-Black.ttf.import  NotoSansJP-VariableFont_wght.ttf.import
imgs/: bayer 16x16.png.import  cat eye.png.import  palette.png.import  void and cluster 32x32.png.import  void and cluster atlas 32x32x10.png.import
imgs/dithering_overlays/: bayer 16x16.png.import  void and cluster 32x32.png.import  void and cluster atlas 32x32x10.png.import
imgs/icons/: cat eye.png.import  select_underlay.png.import  select_underlay.png~
levels/: test-level.tscn
scenes/blocks/: mesh lib source.tscn
scenes/characters/: player_char.tscn
scenes/levels/: template.tscn  (+2 more)
shaders/: dithering ordered special.gdshader  dithering ordered special.gdshader.uid  dithering ordered.gdshader.uid  dithering sharpen.gdshader  dithering sharpen.gdshader.uid  dithering-ordered.gdshader  viewport passthrough.gdshader  viewport passthrough.gdshader.uid
src/: constants.rs  lib.rs
(+20 files in other folders)
